objects/LLC_BI__Risk_Grade_Template__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Risk_Rating_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. This field is populated automatically whenever the user creates a risk rating review from the loan or relationship. This field specifies the Annual Review (Risk Rating Review) associated with the Risk Grade Template. If this field is blank, then the Risk Grade Template is treated as a template by the system, and can be used to create future risk rating reviews.</description>
        <label>Risk Rating Review</label>
        <referenceTo>LLC_BI__Annual_Review__c</referenceTo>
        <relationshipLabel>Risk Grade Template</relationshipLabel>
        <relationshipName>Risk_Grade_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Round_Final_Risk_Grade__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, the final risk grade will be a round number. If deselected, then the final risk grade will be a decimal number.</description>
        <inlineHelpText>If checked then the final risk grade will be a round number. If unchecked then the final risk grade will be a decimal number.</inlineHelpText>
        <label>Round Final Risk Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Template_Object_Field_Name__c</fullName>
        <description>This field is optional. It is manually populated. This field is used to automatically select which risk grade template should be used as the template for a risk rating review during creation. To use this field, you can set the field name from the object you selected in LLC_BI__Template_Object_Type__c.  You must use &quot;Template_Object_Field_Value__c&quot; field as well for this field to work appropriately.</description>
        <label>Template Object Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Template_Object_Field_Value__c</fullName>
        <description>This field is optional. It is manually populated. This field is used to automatically select which risk grade template should be used as the template for a risk rating review during creation. To use this field, you can set the value which has to be entered or selected from the field in &quot;LLC_BI__Template_Object_Field_Name__c&quot; for this particular Risk Grade Template to be used during the creation of a Risk Rating Review.</description>
        <label>Template Object Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Template_Object_Type__c</fullName>
        <description>This field is optional. It is manually populated. This field is used to automatically select which risk grade template should be used as the template for a risk rating review during creation. To use this field, you can set the object you want this risk grade template to be associated with (ex: Account or LLC_BI__Loan__c).</description>
        <label>Template Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Loan__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Risk Grade Template</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>LLC_BI__Risk_Rating_Review__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Risk_Rating_Review__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Risk Grade Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Grade Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>